@startuml contester-metamodel-class-diagram

class "ViewModel" as Model {
    name : String
}

class ModelAttribute {
    id : String
    name : String
}

class ModelFunction {
    id : String 
    name : String
}

class "TestInputs" as Test {
    name : String
    content : String
}

class Constraint {
    text : String
}

Model *-- "*" ModelAttribute
Model *-- "*" ModelFunction
Model "0..1" *-- "*" Constraint
Model *-- "*" Test

ModelFunction "0..1" *-- "*" Constraint
ModelAttribute "0..1" *-- "*" Constraint

@enduml